# auto-uv

./: .actrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CHANGELOG_v0.1.2.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEST_COVERAGE.md  example.py  pyproject.toml
.github/agents/: README.md  docs-agent.md  lint-agent.md  release-agent.md  test-agent.md
.github/workflows/: test.yml  version-bump.yml  workflow.yml
.github/workflows/agents/: README.md  docs-agent.md  lint-agent.md  release-agent.md  test-agent.md
src/: auto_uv.py
tests/: test_auto_uv.py
